[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "chanalyze"
author = "Anjan Roy"
author-email = "anjanroy@yandex.com"
home-page = "https://itzmeanjan.github.io/chanalyze"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
requires = ["matplotlib", "requests", "ray"]
requires-python=">=3.7"
description-file="README.md"

[tool.flit.metadata.requires-extra]
dev = ["flit"]

[tool.flit.sdist]
exclude=[
  "plots/*",
  "_config.yml"
]

[tool.flit.scripts]
chanalyze = "chanalyze.app:main"
